TEST_PROGRAMS/INVALID/omer_dirar/unsupported_switch_error.min
#Syntactically incorrect: keyword 'switch' is not supported

var x : int;

print "Enter a value for x.";
read x;

switch x 
   case 1 : 
    print "Hello!";
    break;
   case 2: 
    print "Enter a value for y.";
    read y;
    break;
   default:
    print "Goodbye!";
end

